# FIRECODE

./: .coveragerc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  MANIFEST.in  README.md  paper.bib  paper.md  paper_example.md  pyproject.toml  setup.py
.ase/: gui.py
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: test.yml
docs/: conf.py  embeddings.rst  env_vars.rst  examples.rst  index.rst  installation.rst  introduction.rst  operators_keywords.rst  requirements.txt  usage.rst
firecode/: __main__.py  _gaussian.py  algebra.py  ase_manipulations.py  atropisomer_module.py  automep.py  concurrent_test.py  context_managers.py  dispatcher.py  embedder.py  embedder_options.py  embeds.py  ensemble.py  errors.py  explode_search.py  graph_manipulations.py  hypermolecule_class.py  mep_relaxer.py  modify_settings.py  mprof.py  multiembed.py  nci.py  numba_functions.py  operators.py  optimization_methods.py  parameters.py  pka.py  profiler.py  pruning.py  pt.py  quotes.json  quotes.py  rdkit_tools.py  reactive_atoms_classes.py  references.py  rmsd.py  settings.py  solvents.py  standalone_optimizer.py  tests.py  (+6 more)
firecode/calculators/: __init__.py  _ase_uma.py  _gaussian.py  _mopac.py  _openbabel.py  _orca.py  _xtb.py  ase_uma.py  dummy_ase_calc.py  solvation_delta_calc.py  xtb.py
firecode/interfaces/: crest.py  goat.py
firecode/md/: equilibration.py  packmol.py
firecode/tests/: conftest.py  test_suite.py
firecode/tests/embed_chelotropic/: embed_chelotropic.txt
firecode/tests/embed_cyclical/: C2H4_hypermolecule.xyz
firecode/tests/embed_multiembed/: embed_multiembed.txt
firecode/tests/embed_trimolecular/: embed_trimolecular.txt
firecode/tests/multithread_refine/: .firecoderc  anti_to_gauche.xyz  multithread_refine.txt
firecode/tests/operator_crest_search/: operator_crest_search.txt  salt.xyz
firecode/tests/operator_equilibrate/: C2H4.xyz  operator_equilibrate.txt
firecode/tests/operator_firecode_search/: catalyst.xyz  operator_firecode_search.txt
firecode/tests/operator_fsm/: operator_fsm.txt
firecode/tests/operator_goat/: .firecoderc  H2O.xyz  operator_goat.txt
firecode/tests/operator_mtd_search/: operator_mtd_search.txt
firecode/tests/operator_neb/: operator_neb.txt
firecode/tests/operator_packmol/: operator_packmol.txt
firecode/tests/operator_pka/: HCOOH.xyz  Me2NH2+.xyz  Me3N.xyz  operator_pka.txt
firecode/tests/operator_racerts/: operator_racerts.txt  taut_TS.xyz
firecode/tests/operator_rdkit_search/: butane.xyz  butane_opt.xyz  butane_opt_rdkit_confs.xyz  operator_rdkit_search.txt
firecode/tests/operator_saddle/: operator_saddle.txt  propane_ts.xyz
firecode/tests/operator_scan+neb/: SN2.xyz  operator_scan+neb.txt  taut.xyz
firecode/tests/operator_scan_dihedral/: operator_scan_dihedral.txt
firecode/tests/operator_scan_linear/: dimer.xyz  operator_scan_linear.txt
firecode/tests/trimolecular/: trimolecular.txt
jats/: paper.jats
