[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "firecode"
license = "LGPL-3.0-or-later"
version = "1.5.3"
readme = "README.md"
description = "FIRECODE: Filtering Refiner and Embedder for Conformationally Dense Ensembles"
keywords = []
authors = [{name = "Nicolò Tampellini", email = "nicolo.tampellini@yale.edu"}]
requires-python = ">=3.12, <3.13"
dependencies = [
    "rdkit>=2025.9.3",
    "numpy",
    "scipy",
    "matplotlib",
    "networkx",
    "ase",
    "prettytable",
    "psutil",
    "rich",
    "inquirerpy",
    "prism_pruner",
    "mlfsm",
]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.dependencies]
# Conda packages that aren't in [project.dependencies]
xtb = ">=6.6.0"
xtb-python = "*"
tblite = ">=0.3.0"
tblite-python = "*"
crest = "2.12.*"


[tool.pixi.pypi-dependencies]
firecode = { path = ".", editable = true }

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default"}

[tool.pixi.feature.dev.dependencies]
pytest = ">=9.0.2,<10"
pytest-cov = ">=7.0"
ruff = ">=0.11"
mypy = ">=1.18.2,<2"
pre-commit = ">=4.2"
fairchem-core = "*"
coverage = ">=7.13.4,<8"

[tool.pixi.feature.dev.pypi-dependencies]
aimnet = { version = "*", extras = ["ase"] }

[tool.pixi.feature.dev.tasks]
fmt = { cmd="ruff format ." }
lint = { cmd="ruff check . --fix" }
types = { cmd="mypy" }
test = { cmd="pytest -s" }
test_calc = { cmd="pytest -s -m calc" }
test_cov = { cmd="pytest -s -m codecov --cov=firecode --cov-report=xml:coverage.xml -v --tb=long" }
all = { depends-on = ["fmt", "lint", "types", "test"] }

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "N",  # pep8-naming conventions
    "W",  # pycodestyle warnings
    "C4", # comprehensions
    "PL", # pylint
    "PT", # flake8-pytest-style
    "PIE", # misc lints
    "PYI", # flake8-pyi
    "TID", # tidy imports
    "TCH", # type-checking imports
    "RUF", # Ruff-specific rules
    "RSE", # flake8-raise
    "ICN001", # unconventional-import-alias
]
ignore = [
    "N803", # Invalid-argument-name (non-lowercase)
    "N806", # Non-lowercase variable in function
    "N815", # Variable in class scope should not be mixedCase
    "PLR0911", # Too many returns
    "PLR0912", # Too many branches
    "PLR0913", # Too many arguments to function call
    "PLR0914", # Too many locals
    "PLR0915", # Too many statements
    "PLR1702", # Too many nested-blocks
    "PLR2004", # Magic value comparison
    "PT013", # Incorrect import of `pytest`
]

[project.scripts]
firecode = "firecode.__main__:main"

[project.optional-dependencies]
# Optional calculator-specific dependencies
uma = [
    "fairchem-core",
]
aimnet2 = [
    "aimnet[ase]",
]
full = [
    "fairchem-core",
    "aimnet[ase]",
]

[tool.coverage.run]
relative_files = true

[tool.coverage.report]
relative_files = true

[tool.coverage.xml]
output = "coverage.xml"
